edits to question editor

--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -24,6 +24,7 @@
 .launchpadsectioncolumn {background-color: #F9F9F9;display:inline-block; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1); padding:10px 5px; width:185px; vertical-align: top;overflow:auto; height:460px;}
 .launchpadsectionpoints {display:inline-block; vertical-align: top;}
 .launchpadCRcolumn {display:inline-block;vertical-align: top; overflow:auto;}
+.launchpadCRcolumn pre{padding: 0; margin:0; word-break: normal; background-color: inherit; border: none;}
 .launchpadcolumnheader {font-weight:bold; text-align: left; margin-bottom:10px;}
 .launchpadcolumnsubheader {font-weight:bold; text-align:right; font-style:italic;}
 .sectionlist {margin: 0 0 18px 2px; text-align:left;}
