--- a/app/views/mailer/welcome.html.haml
+++ b/app/views/mailer/welcome.html.haml
@@ -23,3 +23,10 @@
               Thanks,
               %br/
               The MetaBright Team
+      %tr
+        %td
+          %span{style:"font-size:10px; color:gray;"}
+            You are receiving this message because @!user email address!@ is a member of MetaBright. To adjust your email settings or to unsubscribe, 
+          %span{style:"font-size:10px;"}= link_to "click here.", notification_settings_url(@user.signup_link)
+          %br
+          %span{style:"font-size:10px; color:gray;"} MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
