copy edits to emails

--- a/app/views/mailer/content_vote_alert.html.haml
+++ b/app/views/mailer/content_vote_alert.html.haml
@@ -13,7 +13,7 @@
           %td{ style: "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
             %p #{@voting_user.name} just voted for your response to:
             %p.quote{ style: "font-size:12px; font-style: italic;" }= @submission.task.question
-            %p To see the comment thread, follow the link below:
+            %p To see your post, follow the link below:
             %p
               %a{ href: @action_url }= @action_url
             %p 
