--- a/app/views/mailer/editing_unlock.html.haml
+++ b/app/views/mailer/editing_unlock.html.haml
@@ -23,3 +23,11 @@
               Thanks,
               %br/
               The MetaBright Team
+      %tr
+        %td
+          %span{style:"font-size:10px; color:gray;"}
+            You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
+          %span{style:"font-size:10px;"}= link_to "click here.", @settings_url
+          %br/
+          %br/
+          %span{style:"font-size:10px; color:gray;"} MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
