more edits to emails

--- a/app/views/mailer/section_unlock.html.haml
+++ b/app/views/mailer/section_unlock.html.haml
@@ -28,10 +28,8 @@
               %br/
               The MetaBright Team
       %tr
-        %td
+        %td{ style: "padding:3px 12px 6px;"}
           %span{style:"font-size:10px; color:gray;"}
             You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
           %span{style:"font-size:10px;"}= link_to "click here.", @settings_url
-          %br/
-          %br/
           %span{style:"font-size:10px; color:gray;"} MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
