--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -359,3 +359,13 @@ div.footer { bottom: inherit; }
 	.persona_progress_area img{vertical-align:baseline; position:relative; top:8px;}
 	.singleprogressentry img{vertical-align:baseline;}
 }
+
+
+/* notifications panel */
+.notificationpanelbody {padding-top:0; padding-left:20px;}
+.notificationpanelbody h4 {font-weight: bold;line-height: 32px;font-size: 18px;}
+.settingsmanagementarea{display: block;padding: 9.5px;margin: 0 0 10px;font-size: 13px;line-height: 20px;word-break: break-all;word-wrap: break-word;background-color: #f5f5f5;border: 1px solid #ccc;border: 1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.settingsmanagementarea h5{font-size:15px; display:inline-block;}
+.settingsmanagementarea .control-group{display:inline-block; margin:0; padding:0;position: relative; bottom:3px; float:right;}
+.settingsmanagementarea .control-label{font-weight:bold; padding:0; margin:0; position:relative; top:3px; }
+.settingsmanagementarea>div{margin-bottom:15px; }
