--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -7,7 +7,7 @@
   = form_for(@notification_settings, url: notification_settings_path(@user.id), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
     = render 'shared/error_messages', object: f.object
     %div.notificationpanelbody
-      %h4 When do you want to recieve emails from Metabright?
+      %h4 When do you want to receive emails from Metabright?
       %div.settingsmanagementarea
         %div
           %h5 When someone comments or votes on your submissions, or replies to you.
