--- a/app/views/tasks/_new_task_form.html.haml
+++ b/app/views/tasks/_new_task_form.html.haml
@@ -18,7 +18,7 @@
             %select.task_answer_type{ name: "task[answer_type]" }
               %option{ value: "2", selected: "selected" } Multiple choice
               %option{ value: "0" } Creative response
-              %option{ value: "3" } Checkin
+              %option{ value: "3" } Task
         %div.control-group.hide
           %label.control-label Response type
           %div.controls
