making buttons red

--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -36,4 +36,4 @@
         %div.form_field
           = render "stored_resources/new_image"
       = link_to "Cancel", root_path, class: "button button-standard"
-      = f.submit "Next", class: "button button-info", style: "margin-left: 15px;"
+      = f.submit "Next", class: "button button-actionable", style: "margin-left: 15px;"
