--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -41,6 +41,6 @@
     %hr
     %div.control-group
       %div.controls
-      = link_to "Remove Account", current_user, method: :delete, confirm: "Are you absolutely certain you would like to delete your account?", class: "button button-actionable", style: "margin-left: 20px; float: left;"
-      = f.submit "Save", class: "button button-info", style: "float: right; margin-left: 10px; margin-right: 20px;"
+      = link_to "Remove Account", current_user, method: :delete, confirm: "Are you absolutely certain you would like to delete your account? This action is irreversible", class: "button button-info", style: "margin-left: 20px; float: left;"
+      = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
       = link_to "Cancel", current_user, class: "button button-standard", style: "float: right;"
