--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -41,7 +41,7 @@
     %div.control-group
       %label.control-label Notification Settings
       %div.controls{ style: "padding-top: 5px;"}
-        = link_to "Edit Settings", notification_settings_path(current_user.username)
+        = link_to "Edit Settings", notification_settings_path(current_user.signup_token)
     %hr
     %div.control-group
       %div.controls
