--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -59,7 +59,7 @@
         = image_tag(@path.path_pic, class: "bigheaderimage")
     %div.span4{ style: "margin-left: 5px;" }
       %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
-      %p.editable{ style: "font-size:15px;", title: "Click to edit" }= @path.description.empty? ? "Click here to add a description." : @path.description
+      %p#challenge_desc_pop.editable{ style: "font-size:15px;", title: "Click to edit" }= @path.description.empty? ? "Click here to add a description." : @path.description
     %div.floatr{ style: "margin-top:10px;"}
       - if @path.is_published
         = link_to "View", @path, class: "button button-actionable"
@@ -81,9 +81,9 @@
                     %li.active
                       %a.edit_section_overview_pill{ onclick: "close_section_container(this);", style:"cursor:pointer;" } Overview
                     %li
-                      %a.edit_section_questions_pill{ onclick: "display_section_questions($(this).parents('td.section'));", style:"cursor:pointer;" } Questions
+                      %a#questions_pop.edit_section_questions_pill{ onclick: "display_section_questions($(this).parents('td.section'));", style:"cursor:pointer;" } Questions
                     %li
-                      %a.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});", style:"cursor:pointer;" } Settings
+                      %a#section_settings_pop.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});", style:"cursor:pointer;" } Settings
                 %div.span8
                   %h3.section_editable{ style: "margin: 0px;", onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" }= (i+1).to_s+". "+s.name
                   %div
