--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -33,7 +33,7 @@
           %div#challengecarousel_inner{ style: "#{@enrollments.size < 4 ? 'margin-left: -12px;' : ''}" }
             %ul#challengecarousel_ul
               - if @enrollments.size < 4
-                = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
+                = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the MetaBright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
               - @enrollments.shuffle.each do |e|
                 = render "shared/mosaic", { pic: e.user.profile_pic, link: profile_path(e.user.username), title: e.user.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
           - if @enrollments.size > 4
