--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -42,7 +42,7 @@
           %label.control-label "Delete Section"
           %div.controls{ style: "padding-top: 8px;" }= link_to "Delete", confirm_delete_section_path(s)
         %div{ style: "float:left; margin: 20px 20px 0px 0;" }
-          - if s.is_published
+          - if s.published_at
             = link_to "Unpublish", unpublish_section_path(s), class: "button button-info", confirm: "Are you sure you want to unpublish this section?"
           - else
             = link_to "Publish", publish_section_path(s), class: "button button-info", confirm: "Are you sure you want to publish this section?"
@@ -61,7 +61,7 @@
       %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
       %p.editable{ style: "font-size:15px;", title: "Click to edit" }= @path.description.empty? ? "Click here to add a description." : @path.description
     %div.floatr{ style: "margin-top:10px;"}
-      - if @path.is_published
+      - if @path.published_at
         = link_to "View", @path, class: "button button-actionable"
       - else
         = link_to "Publish", publish_path_path(@path), class: "button button-actionable", confirm: "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes."
@@ -89,7 +89,7 @@
                   %div
                     %span.label{ style: "font-size: 12px; vertical-align:middle;" }
                       %span#question_counter #{s.tasks.size} Questions
-                    - unless s.is_published
+                    - unless s.published_at
                       %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
               %div.section_questions_container.row{ style: "display:none; margin-top: 20px;" }
                 = render "sections/edit_tasks", { :section => s, :tasks => s.tasks, :display_new_task_form => true, :new_task => s.tasks.new }
