--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -76,7 +76,7 @@
                   %div.leftboxfooter{style: "padding: 0;background-color: white;max-height: 352px;overflow-y: auto;"}
                     - notifications.each do |event|
                       %li.notification_space
-                        %div.notification{ class: "#{event.is_read ? '' : 'notification-unread'}" }
+                        %div.notification{ class: "#{event.read_at ? '' : 'notification-unread'}" }
                           = link_to event.link do
                             = image_tag event.image_link, class: "photo", style: "width:35px; height: 35px;"
                             %p.notification_body= event.content
