--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -372,3 +372,8 @@ div.footer { bottom: inherit; }
 .settingsmanagementarea .control-group{display:inline-block; margin:0; padding:0;position: relative; bottom:3px; float:right;}
 .settingsmanagementarea .control-label{font-weight:bold; padding:0; margin:0; position:relative; top:3px; }
 .settingsmanagementarea>div{margin-bottom:15px; }
+
+/* Edit Profile */
+.editprofilemanagementarea{display: block;padding: 15px 9.5px 4.5px 9.5px;margin: 0 0 10px;font-size: 13px;line-height: 20px;word-break: break-all;word-wrap: break-word;background-color: #f5f5f5;border: 1px solid #ccc;border: 1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.editprofilemanagementarea .control-group{display:inline-block; margin:0; padding:0;position: relative; bottom:3px;}
+.editprofilemanagementarea control-label{font-weight:bold; padding:0; margin:0; position:relative; top:3px; }
