--- a/app/views/mailer/contribution_unlocked.html.haml
+++ b/app/views/mailer/contribution_unlocked.html.haml
@@ -16,7 +16,7 @@
           %span{:style => "font-size:14px; font-style:italic;"} You've unlocked a new power...
           %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
             %p{:style => "font-size:12px;"}
-              After making solid progress in #{@challenge_name} Challenge, you've unlocked the ability to create your own CR's, Tasks, and Arena questions. 
+              After making solid progress in #{@challenge_name} Challenge, you've unlocked the ability to create your own questions and tasks. 
               The questions you create will be immediately accessible in the #{@challenge_name} Challenge by the MetaBright community.    
             %p{:style => "font-size:12px;"} 
               To get started, click the blue "Create a Question" button in the modal.
