--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -19,14 +19,10 @@
               %a.btn.secondary{ style: "margin-left:10px;" } Preview
         %div{style:"display:inline-block; vertical-align:top; position:relative; bottom:34px; margin-bottom:-25px;"}
           %div.control-group
-            %div.controls{style:"margin-left:102px;"}
-              = image_tag @user.profile_pic, id: "image_url_preview", width: "180"
+            %div.controls{style:"margin-left:112px;"}
+              = image_tag @user.profile_pic, id: "image_url_preview", width: "150"
       %h4 Vital Stats
       %div.editprofilemanagementarea
-        %div.control-group
-          %label.control-label About
-          %div.controls
-            = f.text_area :description, rows: "5", style: "width: 400px;", placeholder: "Tell us about yourself..."
         %div.control-group
           %label.control-label Location
           %div.controls
@@ -43,6 +39,10 @@
           %label.control-label Title
           %div.controls
             = f.text_field :title
+        %div.control-group
+          %label.control-label About
+          %div.controls
+            = f.text_area :description, rows: "5", style: "width: 390px;", placeholder: "Tell us about yourself..."
       %h4 Your email address
       %span{style:"position:relative; bottom:5px;"}
         (We hate spam too. We'll never sell, rent, or otherwise abuse your email address.)
@@ -56,6 +56,6 @@
     %hr
     %div.control-group
       %div.controls
-      = link_to "Remove Account", current_user, method: :delete, confirm: "Are you absolutely certain you would like to delete your account? This action is irreversible", class: "button button-info", style: "margin-left: 20px; float: left;"
+      = link_to "Remove Account", current_user, method: :delete, confirm: "Are you absolutely certain you would like to delete your account? This action is irreversible",  style: "margin-left: 20px; margin-top:7px; float: left;"
       = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
       = link_to "Cancel", current_user, class: "button button-standard", style: "float: right;"
