Contribution unlock link fix.

--- a/app/views/mailer/contribution_unlocked.html.haml
+++ b/app/views/mailer/contribution_unlocked.html.haml
@@ -20,7 +20,7 @@
               The questions you create will be immediately accessible in the #{@challenge_name} Challenge by the MetaBright community.    
             %p{:style => "font-size:12px;"} 
               To get started, click the blue "Create a Question" button in the modal.
-              %a{href:"#"} Try it out now.
+              = link_to "Try it out now.", @challenge_link
             %p{:style => "font-size:12px;"} 
               Thanks,
               %br/
