--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -26,6 +26,8 @@
       %div.postheader
         %h3
           = link_to truncate(ct.user.to_s, length: 50), profile_path(ct.user.username), class:"username"
+        %span{style:""}
+          = link_to truncate(ct.path.name.to_s, length: 40), challenge_path(ct.path.permalink), class:"challengename"
         %div.votingandpointsarea{ id: ("points_pop" unless current_user == ct.user)}
           - if current_user
             %span.vote_points{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= ct.points_awarded
@@ -46,8 +48,6 @@
           - else
             %span.vote_points{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= ct.points_awarded
             %span{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
-      %div{style:"margin:-8px 0 3px 0;"}
-        = link_to truncate(ct.path.name.to_s, length: 80), challenge_path(ct.path.permalink), class:"challengename"
       %div.posttext.leveltext.dropdown
         %pre.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", role: "button", style: "color:inherit; cursor:default;" } #{ct.task.question}
         %ul.dropdown-menu{ role: "menu", style: "left:99.5%; top:-70%; min-width:152px;"}
