--- a/app/views/stored_resources/_new_image.html.haml
+++ b/app/views/stored_resources/_new_image.html.haml
@@ -12,7 +12,11 @@
             $parent.find("input.image_input_field").val(result.id);
             $parent.find("div.image_input").remove();
             $parent.find("img.image_preview").attr("src", result.link).show();
+            $("#new_image_loading_image").hide();
           }
+        },
+        submit: function(e){
+          $("#new_image_loading_image").show();
         },
         autoUpload: true,
         acceptFileTypes: /(\.|\/)(gif|jpe?g|png)$/i
@@ -23,6 +27,7 @@
     = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/image.png", size: "16x16", style: "vertical-align: middle;"
     %span{ style: "vertical-align: middle; font-size: 13px;" } Add image:
     = file_field_tag("obj", class: "fileupload", style: "margin-left: 2px; line-height: inherit; height: inherit; vertical-align: middle; width: 185px;")
+    = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "20x20", style: "vertical-align: middle; display: none;", id: "new_image_loading_image"
   %div{ style: "margin-top: 10px;" }
     = hidden_field_tag("stored_resource_id", nil, class: "image_input_field")
     %img.image_preview{ style: "height: 70px; max-width: 150px; display: none;" }
