--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -43,7 +43,8 @@
                     %li Make sure you check for spelling and grammar.
                     %li 
                       You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
-                      %span
+                      %span.arena_create_tt
+                        %a#points-tt1.mb-tooltip{href:"#", rel:"tooltip"}
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                   %legend{style:"margin-bottom:5px; "} Create an Arena question
@@ -128,7 +129,7 @@
                     %li Make sure you check for spelling and grammar.
                     %li 
                       You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
-                      %span
+                      %span.cr_create_tt
                         %a#points-tt2.mb-tooltip{href:"#", rel:"tooltip"}
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
@@ -203,7 +204,7 @@
                     %li Make sure you check for spelling and grammar.
                     %li 
                       You <strong>earn 50 points</strong> per published Task, but will <strong>lose 100 points</strong> if it's reported and taken down.
-                      %span
+                      %span.task_create_tt
                         %a#points-tt3.mb-tooltip{href:"#", rel:"tooltip"}
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
