--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -1,5 +1,5 @@
 %div.quizcontainer{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'}" }
-  
+  = render "layouts/report_issue_modal"
   %div.quizspace
     :javascript
       var continue_countdown = true;
